apps/influxdb/install/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influxdb
  labels:
    app: influxdb
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/part-of: influxdb
    app.kubernetes.io/instance: influxdb
    app.kubernetes.io/component: influxdb
spec:
  selector:
    app: influxdb
  ports:
    - name: http
      protocol: TCP
      port: 8086
      targetPort: http
  type: ClusterIP
